Fix element overflow when too long word is present in Trai/Method/Unit fields on the Variable detail view

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -296,3 +296,7 @@ table.properties-widget > tbody > tr > th:first-letter {
     font-weight: bold;
     color: red;
 }
+
+.variable-view td {
+    word-break: break-all;
+}
